--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,37 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --black: #333438;
+  --white: #ffffff;
+  --green: #475e3c;
+  --blue: #b8d5e6;
+  --blueBorder: #b9d5e64d;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  line-height: 120%;
+  font-family: var(--suisseReg);
+  scroll-behavior: smooth;
+  scroll-margin-top: 20px;
+  overscroll-behavior: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+html {
+  font-size: 62.5%;
+  height: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent;
+}
+
+body {
+  font-size: 1.6rem;
 }
 
 a {
@@ -35,8 +39,177 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  color: var(--blue);
 }
+
+h1 {
+  font-size: 14.7vw;
+  line-height: 1;
+  letter-spacing: -5px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: var(--EduSocialCondensedMedium);
+}
+
+h2 {
+  font-size: 1.6rem;
+  line-height: 0.9;
+  letter-spacing: 0.3px;
+  font-family: var(--EduSocialCondensedMedium);
+}
+
+h3 {
+  font-size: 2.4rem;
+  line-height: 120%;
+  font-family: var(--ABCSocialLight);
+}
+
+h4 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: -0.04em;
+}
+
+h5 {
+  font-size: 2rem;
+  font-weight: 500;
+  letter-spacing: -0.04em;
+}
+
+h6 {
+  font-size: 2rem;
+  font-weight: 500;
+  letter-spacing: -0.04em;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+p,
+input,
+textarea {
+  hyphens: auto;
+  letter-spacing: -0.2px;
+  margin-bottom: 0;
+  color: var(--black);
+  font-size: 1em;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+.toastFont {
+  font-family: var(--interTight);
+  font-weight: 700;
+}
+
+/* ::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: var(--secondary);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary);
+}
+
+::selection {
+  background: var(--secondary);
+}
+::-moz-selection {
+  background: var(--secondary);
+} */
+
+/* .h2v2 {
+  font-size: 6rem;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: -0.04em;
+} */
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 55%;
+  }
+
+  p {
+    font-size: 113.7%;
+  }
+
+  /* h1,
+  .span1 {
+    font-size: 6rem;
+    letter-spacing: -0.02em;
+  } */
+}
+
+@media screen and (max-width: 568px) {
+  html {
+    font-size: 50%;
+  }
+
+  p {
+    hyphens: auto;
+  }
+
+  /* h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-transform: none;
+  } */
+
+  /* h1,
+  .span1 {
+    font-size: 4rem;
+    letter-spacing: -0.02em;
+  } */
+
+  /* h2,
+  .h2v2,
+  .h2v3 {
+    font-size: 3rem;
+  }
+
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 2rem;
+  } */
+
+  /* h2 {
+    font-size: 5.5rem;
+  } */
+  /* 
+  p,
+  label {
+    font-size: 110%;
+  } */
+}
+
+/* .toastFont {
+} */
+
+/* Only use in production */
+/* @media screen and (max-width: 480px) {
+  h1 {
+    letter-spacing: -1.5px;
+  }
+  h2 {
+    letter-spacing: -1px;
+    line-height: 120%;
+  }
+} */
