--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,3 +1,8 @@
 .container {
   background-color: var(--green);
+  border-bottom: 1px solid var(--blueBorder);
+}
+
+.heading {
+  padding-bottom: 30.5rem;
 }
