--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: var(--green);
   border-bottom: 1px solid var(--blueBorder);
+  justify-content: center;
 }
 
 .heading {
