--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,9 +1,12 @@
 .container {
   background-color: var(--green);
-  border-bottom: 1px solid var(--blueBorder);
+  /* border-bottom: 1px solid var(--blueBorder); */
   justify-content: center;
-}
-
-.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
   padding-bottom: 30.5rem;
 }
+
