--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,13 +5,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 5rem;
-  padding-bottom: 30.5rem;
+  padding: 16rem 0rem;
+  border-bottom: 1px solid var(--blueBorder);
+}
+
+.copy {
+  color: var(--blue);
+  text-align: center;
+  font-size: 1.8rem;
+  font-family: var(--GTAmericaMonoRegular);
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 968px) {
- .container {
-  padding-bottom: 0rem;
-  padding: 16rem 0rem;
- } 
+  .container {
+    padding: 16rem 0rem;
+  }
 }
