--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,7 +102,7 @@ textarea {
   hyphens: auto;
   letter-spacing: -0.2px;
   margin-bottom: 0;
-  color: var(--black);
+  color: var(--blue);
   font-size: 1em;
 }
 
