--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -104,7 +104,7 @@
 
   .navMenu {
     position: fixed;
-    right: -100%;
+    right: -105%;
     top: 0px;
     grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
@@ -116,6 +116,7 @@
     background-color: var(--green);
     transition: all 0.3s ease-in;
     border-bottom: 1px solid var(--blueBorder);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.9);
   }
 
   .navMenu.active {
