--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -5,6 +5,7 @@
 .top {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  border-top: 1px solid var(--blueBorder);
 }
 
 .topLeft {
@@ -37,6 +38,7 @@
 .bottom {
   display: grid;
   border-top: 1px solid var(--blueBorder);
+  border-bottom: 1px solid var(--blueBorder);
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -107,6 +109,11 @@
 
   .bottom {
     grid-template-columns: repeat(2, 1fr);
+    border-bottom: none;
+  }
+
+  .card {
+    border-bottom: 1px solid var(--blueBorder);
   }
 }
 
@@ -118,7 +125,6 @@
   .card {
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid var(--blueBorder);
     border-right: none;
     gap: 5rem;
   }
