--- a/src/components/ProjectSection/ProjectSection.module.css
+++ b/src/components/ProjectSection/ProjectSection.module.css
@@ -4,7 +4,6 @@
   font-size: 1.8rem;
   font-family: var(--GTAmericaMonoRegular);
   text-transform: uppercase;
-  border-top: 1px solid var(--blueBorder);
   border-bottom: 1px solid var(--blueBorder);
   padding: 2rem;
   display: block;
@@ -23,6 +22,8 @@
   list-style: none;
   padding: 0;
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100%;
 }
 
 .name {
@@ -30,17 +31,21 @@
   font-family: var(--barlowCondensed);
   text-transform: uppercase;
   cursor: pointer;
-  padding: .2rem 2rem;
   border-top: 1px solid var(--green);
   border-bottom: 1px solid var(--green);
   transition: all 0.1s ease-in;
+  border: 1px solid var(--blueBorder);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .name:nth-child(1) {
   padding-top: 2rem;
 }
 
-.name:nth-child(17) {
+.name:nth-child(6) {
   padding-bottom: 2rem;
 }
 
@@ -54,7 +59,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  min-height: 200px;
+  min-height: 400px;
 }
 
 .icon {
@@ -70,30 +75,57 @@
   font-family: var(--GTAmericaMonoRegular);
 }
 
-@media screen and (max-width: 568px) {
+.iconContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.imgContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+
+.image:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (max-width: 1068px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .left {
+  /* .left {
     padding: 3rem 0rem;
+  } */
+
+  /* .name {
+    cursor: default;
+  } */
+
+  /* .name:hover {
+    border-top: 1px solid var(--green);
+    border-bottom: 1px solid var(--green);
+  } */
+}
+
+@media screen and (max-width: 480px) {
+  .list {
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .name {
-    cursor: default;
-  }
-
-  .name:hover {
-    border-top: 1px solid var(--green);
-    border-bottom: 1px solid var(--green);
-  }
-
-  .right {
-    display: none;
-  }
-
-  .icon {
-    width: 100px;
-    height: 100px;
+    text-align: center;
   }
 }
