--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -2,14 +2,6 @@
   border-top: 1px solid var(--blueBorder);
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 2rem;
-}
-
 .top {
   padding-bottom: 2rem;
   border-bottom: 1px solid var(--blueBorder);
@@ -22,4 +14,41 @@
   text-indent: 4em;
   margin-left: auto;
   margin-right: auto;
+}
+
+.middle,
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  border-bottom: 1px solid var(--blueBorder);
+}
+
+.sectionHeading,
+.sectionHeadingii {
+  text-transform: uppercase;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  line-height: 1;
+  letter-spacing: 0.5px;
+  font-family: var(--barlowCondensed);
+  height: 100%;
+}
+
+.sectionHeading {
+  border-right: 1px solid var(--blueBorder);
+}
+
+.bottomLeft,
+.bottomRight {
+  padding: 2rem;
+}
+
+.bottomLeft {
+  border-right: 1px solid var(--blueBorder);
+}
+
+.copy {
+  font-family: var(--ABCSocialLight);
+  font-size: 1.6rem;
 }
