--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -41,11 +41,7 @@
 
 .name:nth-child(17) {
   padding-bottom: 2rem;
-}
-
-.name:hover {
-  border-top: 1px solid var(--blueBorder);
-  border-bottom: 1px solid var(--blueBorder);
+  border-bottom: none;
 }
 
 .right {
