--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   border-top: 1px solid var(--blueBorder);
+  border-bottom: 1px solid var(--blueBorder);
 }
 
 .topLeft {
@@ -14,21 +15,29 @@
   border-right: 1px solid var(--blueBorder);
 }
 
-.topRight {
+.topRight,
+.heading {
   grid-column: span 3;
   padding: 2rem;
-  padding-bottom: 20rem;
+  /* padding-bottom: 20rem; */
+}
+
+.middle {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .heading {
   font-size: 5rem;
   text-transform: uppercase;
-    text-indent: 4em;
-
+  text-indent: 4em;
+  padding: 2rem;
+  border-left: 1px solid var(--blueBorder);
 }
 
 .sectionTitle {
-  color: var(--blue);
+  color: var(--green);
+  background-color: var(--blue);
   text-align: center;
   font-size: 1.8rem;
   font-family: var(--GTAmericaMonoRegular);
@@ -82,13 +91,18 @@
 }
 
 @media screen and (max-width: 968px) {
-  .top {
+  .top,
+  .middle {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
     width: 100%;
+  }
+
+  .top {
+    border-top: none;
   }
 
   .topLeft {
@@ -99,10 +113,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--blue);
   }
 
   .topRight {
     padding-bottom: 5rem;
+    display: none;
+  }
+
+  .middleLeft {
+    /* display: none; */
+    background-color: red;
   }
 
   .sectionTitle {
@@ -129,6 +150,7 @@
     justify-content: center;
     border-right: none;
     gap: 5rem;
+    padding-bottom: 5rem;
   }
   .desc {
     text-align: center;
