--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -24,10 +24,8 @@
 }
 
 .headingii {
-  font-size: 3rem;
+  font-size: 2.4rem;
   font-weight: 500;
-  hyphens: none;
-  color: var(--black);
   margin-bottom: 2rem;
 }
 
@@ -53,10 +51,12 @@
 
 .form {
   width: 100%;
+  margin-top: 3rem;
 }
 
 .namesContainer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   gap: 3rem;
@@ -73,30 +73,30 @@
 }
 
 .labelInputBox label {
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: var(--black);
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-family: var(--GTAmericaMonoRegular);
+  color: var(--blue);
   opacity: 0.8;
   padding-left: 0.3rem;
 }
 
 .labelInputBox input,
 .labelInputBox textarea {
-  border-radius: 5px;
   height: 40px;
   width: 100%;
-  border: 1px solid gray;
-  background-color: var(--tan);
-  color: var(--black);
+  border: none;
+  border-bottom: 1px solid var(--blueBorder);
+  background-color: var(--green);
+  color: var(--blue);
   padding: 1rem;
   width: 100%;
   font-weight: 400;
-  inset: none;
 }
 
 .labelInputBox span {
   font-size: 1.4rem;
-  color: rgb(140, 139, 139);
+  color: var(--blue);
 }
 
 .labelInputBox textarea {
@@ -115,13 +115,11 @@
 }
 
 .btn {
-  font-family: var(--dashing);
   text-align: center;
   font-size: 1.8rem;
-  color: var(--tan);
-  background-color: var(--black);
-  border: 1px solid var(--black);
+  color: var(--blue);
   white-space: nowrap;
+  border: 1px solid var(--blueBorder);
   text-transform: uppercase;
   user-select: none;
   transition: all 0.1s ease-in;
@@ -130,16 +128,19 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  border-radius: 8px;
   padding: 9px 30px;
   position: relative;
   z-index: 1;
   width: 100%;
   line-height: 147%;
   cursor: pointer;
+  position: relative;
 }
 
 .icon {
+  position: absolute;
+  top: 10px;
+  left: 10px;
   color: var(--green2);
   width: 27px;
   height: 27px;
@@ -148,8 +149,8 @@
 
 .btn:hover,
 .btn:hover .icon {
-  background-color: transparent;
-  color: var(--black);
+  background-color: var(--blue);
+  color: var(--green);
 }
 
 @media screen and (max-width: 1100px) {
