--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -16,7 +16,6 @@
   margin-right: auto;
 }
 
-.middle,
 .bottom {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -27,21 +26,18 @@
 .sectionHeading,
 .sectionHeadingii {
   text-transform: uppercase;
-  padding: 1.5rem;
   font-size: 1.8rem;
   line-height: 1;
   letter-spacing: 0.5px;
   font-family: var(--barlowCondensed);
-  height: 100%;
-}
-
-.sectionHeading {
-  border-right: 1px solid var(--blueBorder);
+  padding: 1.5rem 2rem;
+  border-bottom: 1px solid var(--blueBorder);
+  width: 100%;
 }
 
 .bottomLeft,
 .bottomRight {
-  padding: 2rem;
+  width: 100%;
 }
 
 .bottomLeft {
@@ -51,4 +47,111 @@
 .copy {
   font-family: var(--ABCSocialLight);
   font-size: 1.6rem;
+  padding: 2rem;
+}
+
+.bottomRight {
+  grid-column: span 3;
+}
+
+.brGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.br1,
+.br2 {
+  width: 100%;
+  padding: 2rem;
+}
+
+.br1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 100%;
+  gap: 3rem;
+  border-right: 1px solid var(--blueBorder);
+}
+
+.address {
+  font-family: var(--GTAmericaMonoRegular);
+  font-size: 1.2rem;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
+.contactBox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1.5rem;
+}
+/* 
+.underline {
+  font-size: 1.4rem;
+  color: var(--green);
+  background-color: var(--blue);
+  padding: .5rem;
+  margin-right: 1rem;
+} */
+
+.imgContainer {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.img {
+  object-fit: cover;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 968px) {
+  .bottom {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .sectionHeading,
+  .sectionHeadingii {
+    text-align: center;
+  }
+
+  .sectionHeadingii {
+    border-top: 1px solid var(--blueBorder);
+  }
+
+  .copy {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .copy {
+    width: 100%;
+  }
+
+  .brGrid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .br1 {
+    text-align: center;
+    align-items: center;
+    gap: 3rem;
+    border-bottom: 1px solid var(--blueBorder);
+    padding-bottom: 3rem;
+    border-right: none;
+  }
+
+  .img {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
