--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -27,6 +27,7 @@
 
 .name {
   font-size: 2.4rem;
+  color: var(--blue);
   font-family: var(--ABCSocialLight);
   text-transform: capitalize;
   border-bottom: 1px solid var(--blueBorder);
@@ -63,6 +64,7 @@
   text-transform: uppercase;
   color: var(--gray);
   font-family: var(--GTAmericaMonoRegular);
+  color: var(--blue);
 }
 
 @media screen and (max-width: 568px) {
