--- a/src/components/PostHero/PostHero.module.css
+++ b/src/components/PostHero/PostHero.module.css
@@ -31,6 +31,8 @@
 
 .box {
   border-right: 1px solid var(--blueBorder);
+  /* height: 100%; */
+  position: relative;
 }
 
 .heading {
@@ -45,7 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 0.8rem;
 }
 
@@ -64,21 +66,29 @@
 .readBox {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  gap: 1rem;
-  margin-top: 5rem;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 2rem;
+  background-color: var(--blue);
+  width: 100%;
 }
 
 .icon {
   width: 2rem;
   height: 2rem;
-  color: var(--blue);
+  color: var(--green);
 }
 
 .link {
   font-family: var(--GTAmericaMonoRegular);
-  color: var(--blue);
+  color: var(--green);
   text-transform: uppercase;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .imgContainer {
@@ -122,5 +132,9 @@
 @media screen and (max-width: 568px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .readBox {
+    position: relative;
   }
 }
