--- a/src/components/PostHeroii/PostHeroii.module.css
+++ b/src/components/PostHeroii/PostHeroii.module.css
@@ -18,6 +18,7 @@
 
 .box {
   border-right: 1px solid var(--blueBorder);
+  position: relative;
 }
 
 .heading {
@@ -51,21 +52,29 @@
 .readBox {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  gap: 1rem;
-  margin-top: 5rem;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 2rem;
+  background-color: var(--blue);
+  width: 100%;
 }
 
 .icon {
   width: 2rem;
   height: 2rem;
-  color: var(--blue);
+  color: var(--green);
 }
 
 .link {
   font-family: var(--GTAmericaMonoRegular);
-  color: var(--blue);
+  color: var(--green);
   text-transform: uppercase;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .imgContainer {
@@ -109,5 +118,9 @@
 @media screen and (max-width: 568px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .readBox {
+    position: relative;
   }
 }
