--- a/src/components/WorkSection/WorkSection.module.css
+++ b/src/components/WorkSection/WorkSection.module.css
@@ -36,24 +36,33 @@
 
 .resumeContainer {
   background-color: var(--blue);
-  padding: 2rem;
+  padding: 2.1rem;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
-
-}
-
-.resume {
+  font-size: 1.6rem;
   text-transform: uppercase;
   color: var(--green);
+  border: 1px solid var(--blue);
+  transition: all 0.2s ease-in;
 }
 
 .icon {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--green);
+  transition: all 0.2s ease-in;
+}
+
+.resumeContainer:hover {
+  background-color: var(--green);
+  color: var(--blue);
+}
+
+.resumeContainer:hover .icon {
+  color: var(--blue);
 }
 
 .right {
