--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -147,4 +147,10 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .address {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
