--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -24,9 +24,10 @@
 }
 
 .headingii {
-  font-size: 2.4rem;
+  font-size: 3rem;
   font-weight: 500;
   margin-bottom: 2rem;
+  font-family: var(--barlowCondensed);
 }
 
 .copy {
@@ -87,7 +88,7 @@
   width: 100%;
   border: none;
   border-bottom: 1px solid var(--blueBorder);
-  background-color: var(--green);
+  background-color: var(--tan);
   color: var(--blue);
   padding: 1rem;
   width: 100%;
@@ -117,7 +118,8 @@
 .btn {
   text-align: center;
   font-size: 1.8rem;
-  color: var(--blue);
+  color: var(--tan);
+  background-color: var(--blue);
   white-space: nowrap;
   border: 1px solid var(--blueBorder);
   text-transform: uppercase;
@@ -147,10 +149,13 @@
   transition: all 0.1s ease-in;
 }
 
-.btn:hover,
+.btn:hover {
+  background-color: var(--tan);
+  color: var(--blue);
+}
+
 .btn:hover .icon {
-  background-color: var(--blue);
-  color: var(--green);
+  color: var(--blue);
 }
 
 @media screen and (max-width: 1100px) {
