--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -45,8 +45,9 @@
 }
 
 .copy {
-  font-family: var(--ABCSocialLight);
-  font-size: 1.6rem;
+  font-family: var(--GTAmericaMonoRegular);
+  font-size: 1.8rem;
+  letter-spacing: -0.5px;
   padding: 2rem;
 }
 
@@ -68,19 +69,31 @@
 .br1 {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   height: 100%;
+  width: 100%;
   gap: 3rem;
   border-right: 1px solid var(--blueBorder);
 }
 
+.addressBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .address {
   font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-style: normal;
   text-transform: uppercase;
   color: var(--blue);
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .contactBox {
@@ -96,12 +109,14 @@
   width: 100%;
   height: 300px;
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 }
+
 .img {
   object-fit: cover;
-  margin-right: auto;
+  border-radius: 50%;
+  border: 1px solid var(--blue);
 }
 
 @media screen and (max-width: 968px) {
