--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,18 +1,20 @@
 .container {
-  background-color: var(--green);
+  background-color: var(--blue);
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .copy {
-  color: var(--blue);
+  color: var(--tan);
   hyphens: auto;
   font-size: 1.3rem;
   margin-top: 3rem;
-  padding-bottom: 7rem;
   font-family: var(--GTAmericaMonoRegular);
   text-align: center;
 }
 
 .headingii {
+  color: var(--tan);
   font-size: 17vw;
   line-height: 0.85;
   letter-spacing: -6px;
@@ -20,7 +22,7 @@
   text-align: center;
   font-weight: 400;
   font-family: var(--barlowCondensed);
-  padding-top: 5rem;
+  /* padding-top: 5rem; */
   white-space: nowrap;
 }
 
