--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,12 +1,12 @@
 .container {
-  background-color: var(--green);
+  background-color: var(--tan);
   justify-content: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 16rem 0rem;
-  border-bottom: 1px solid var(--blueBorder);
+  padding-top: 22rem;
 }
 
 .copy {
