--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -4,12 +4,16 @@
   justify-content: center;
   gap: 1rem;
   cursor: pointer;
+  background-color: var(--tan);
+  padding: 1rem;
+  border: 1px solid var(--blue);
 }
 
 .span {
   font-family: var(--barlowCondensed);
   font-size: 2.5rem;
   white-space: nowrap;
+  color: var(--blue);
 }
 
 .logo {
