--- a/src/components/PostHeroii/PostHeroii.module.css
+++ b/src/components/PostHeroii/PostHeroii.module.css
@@ -1,5 +1,6 @@
 .container {
-  background-color: var(--green);
+  border-top: 1px solid var(--blue);
+  padding-bottom: 20rem;
 }
 
 .content,
@@ -40,9 +41,10 @@
 .listItem {
   color: var(--blue);
   font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   cursor: pointer;
   text-transform: uppercase;
+  letter-spacing: -0.2px;
 }
 
 .listItem:hover {
@@ -51,7 +53,7 @@
 
 .link {
   font-family: var(--GTAmericaMonoRegular);
-  color: var(--green);
+  color: var(--tan);
   text-transform: uppercase;
   display: flex;
   align-items: flex-start;
@@ -74,7 +76,7 @@
 }
 
 .link:hover {
-  background-color: var(--green);
+  background-color: var(--tan);
   color: var(--blue);
   transition: all 0.2s ease-in;
 }
@@ -82,7 +84,7 @@
 .icon {
   width: 2rem;
   height: 2rem;
-  color: var(--green);
+  color: var(--tan);
 }
 
 .imgContainer {
@@ -93,6 +95,7 @@
 
 .img {
   object-fit: cover;
+  border: 1px solid var(--blue);
 }
 
 @media screen and (max-width: 968px) {
