--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,13 +1,10 @@
 .container {
   border-top: 1px solid var(--lightBlack);
+  padding-bottom: 20rem;
 }
 
 .top {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  border-top: 1px solid var(--blueBorder);
   border-bottom: 1px solid var(--blueBorder);
-  padding: 2rem;
 }
 
 .topLeft {
@@ -33,6 +30,7 @@
   text-transform: uppercase;
   text-indent: 4em;
   padding: 2rem;
+  letter-spacing: -0.5px;
   border-left: 1px solid var(--blueBorder);
 }
 
@@ -74,7 +72,7 @@
 .card:nth-child(4) h3,
 .card:nth-child(4) span,
 .card:nth-child(4) p {
-  color: var(--green);
+  color: var(--tan);
 }
 
 .index {
@@ -83,13 +81,17 @@
 }
 
 .feature {
-  font-size: 2rem;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 600;
   margin-bottom: 2rem;
+  font-family: var(--barlowCondensed);
+  text-transform: uppercase;
 }
 
 .desc {
   color: var(--blue);
-  font-family: var(--ABCSocialLight);
+  font-family: var(--GTAmericaMonoRegular);
 }
 
 @media screen and (max-width: 968px) {
@@ -155,6 +157,10 @@
     grid-template-columns: repeat(1, 1fr);
   }
 
+  .heading {
+    text-indent: 0em;
+  }
+
   .card {
     align-items: center;
     justify-content: center;
@@ -162,6 +168,7 @@
     gap: 5rem;
     padding-bottom: 5rem;
   }
+
   .desc {
     text-align: center;
   }
