--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -1,3 +1,7 @@
+.container {
+  padding-bottom: 20rem;
+}
+
 .sectionTitle {
   color: var(--blue);
   text-align: center;
@@ -13,6 +17,8 @@
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  border-top: 1px solid var(--blueBorder);
+  border-bottom: 1px solid var(--blueBorder);
 }
 
 .left {
@@ -26,14 +32,14 @@
 }
 
 .name {
-  font-size: 2.4rem;
+  font-size: 2rem;
   color: var(--blue);
-  font-family: var(--ABCSocialLight);
-  text-transform: capitalize;
+  font-family: var(--GTAmericaMonoRegular);
+  text-transform: uppercase;
   border-bottom: 1px solid var(--blueBorder);
   cursor: pointer;
   padding: 1rem 2rem;
-  transition: all 0.1s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .name:nth-child(1) {
@@ -42,6 +48,11 @@
 
 .name:nth-child(18) {
   border-bottom: none;
+}
+
+.name:hover {
+  background-color: var(--blue);
+  color: var(--tan);
 }
 
 .right {
@@ -78,11 +89,6 @@
 
   .name {
     cursor: default;
-  }
-
-  .name:hover {
-    border-top: 1px solid var(--green);
-    border-bottom: 1px solid var(--green);
   }
 
   .right {
