--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -18,7 +18,7 @@
 
 .detail {
   border: 1px solid var(--blue);
-  background-color: var(--green);
+  background-color: var(--blue);
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -30,13 +30,14 @@
 }
 
 .icon {
-  color: var(--blue);
+  color: var(--tan);
   width: 20px;
   height: 20px;
+  transition: all 0.2s ease-in;
 }
 
 .detail:hover {
-  background-color: var(--blue);
+  background-color: var(--tan);
 }
 
 .detail:hover .icon {
