--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -91,8 +91,8 @@
     cursor: default;
   }
 
-  .right {
-    display: none;
+  .name:nth-child(18) {
+    border-bottom: 1px solid var(--blueBorder);
   }
 
   .icon {
