--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -69,7 +69,7 @@
 .br1 {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   height: 100%;
   width: 100%;
@@ -80,8 +80,8 @@
 .addressBox {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   gap: 1rem;
 }
 
@@ -91,9 +91,6 @@
   font-style: normal;
   text-transform: uppercase;
   color: var(--blue);
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .contactBox {
@@ -115,7 +112,6 @@
 
 .img {
   object-fit: cover;
-  border-radius: 50%;
   border: 1px solid var(--blue);
 }
 
