--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -4,22 +4,24 @@
 
 .top {
   padding-bottom: 2rem;
-  border-bottom: 1px solid var(--blueBorder);
   width: 100%;
 }
 
 .heading {
+  padding: 2rem;
   font-size: 5rem;
   text-transform: uppercase;
   text-indent: 4em;
-  margin-left: auto;
-  margin-right: auto;
+  letter-spacing: -0.7px;
+  line-height: 1.1;
+  font-weight: 600;
 }
 
 .bottom {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   width: 100%;
+  border-top: 1px solid var(--blueBorder);
   border-bottom: 1px solid var(--blueBorder);
 }
 
@@ -46,7 +48,7 @@
 
 .copy {
   font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   letter-spacing: -0.5px;
   padding: 2rem;
 }
@@ -137,6 +139,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .heading {
+    text-indent: 0em;
+  }
+
   .copy {
     width: 100%;
   }
@@ -168,6 +174,6 @@
 
 @media screen and (max-width: 568px) {
   .heading {
-    text-indent: 0em;
+    font-size: 4rem;
   }
 }
