--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -25,13 +25,18 @@
   grid-template-columns: repeat(4, 1fr);
 }
 
+.middleLeft {
+  border-right: 1px solid var(--blue);
+}
+
 .heading {
+  padding: 2rem;
   font-size: 5rem;
   text-transform: uppercase;
   text-indent: 4em;
-  padding: 2rem;
-  letter-spacing: -0.5px;
-  border-left: 1px solid var(--blueBorder);
+  letter-spacing: -0.7px;
+  line-height: 1.1;
+  font-weight: 600;
 }
 
 .sectionTitle {
@@ -152,15 +157,20 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .heading {
+    text-indent: 0em;
+  }
+}
+
 @media screen and (max-width: 568px) {
   .bottom {
     grid-template-columns: repeat(1, 1fr);
   }
 
   .heading {
-    text-indent: 0em;
+    font-size: 4rem;
   }
-
   .card {
     align-items: center;
     justify-content: center;
